# siemens-acronyms-mcp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_COMPLETE.md  MCP_INTEGRATION_GUIDE.md  README.md  SCAFFOLD_NOTES.md  design.md  pyproject.toml  requirements.txt  siemens_acronyms.json
.claude/: README.md  settings.json
.claude/commands/: design.md  issue.md  note.md  resume.md  work.md
.github/workflows/: claude.yml
analysis/0000/: README.md
analysis/1/: DESIGN.md
analysis/4/: DESIGN.md
analysis/6/: DESIGN.md
docs/: MCP_DESIGN.md
scripts/: aliases.sh  demo_test.py  integration_test.py
src/: acronyms_service.py  auth_middleware.py  main.py  mcp_service.py
tests/: __init__.py  test_acronyms_server.py  test_acronyms_server_complex.py.bak  test_http_403_compatibility.py  test_mcp_tools_direct.py
